# pug

./: .envrc  .gitattributes  .gitignore  CI_WORKFLOW_CHANGES.md  CMakeLists.txt  DEVELOP.md  INSTALL.org  Makefile  README.md  README.org  README_umbrella.org  TESTING.md  TEST_REPORTING.md  requirements-test.txt  run_tests_with_reports.py
.clinerules/: 01-overview.md
.github/workflows/: ci.yml  test-linux.yml  test-multiplatforms.yml
cmake/: mingw-w64-toolchain.cmake
docsrc/: usrguide.doc
langlevels/: TODO.org
preludes/: min.pre
pug/src/: gofer.c
scripts/installers/: install-pug.ps1  install-pug.sh
src/: CMakeLists.txt  Makefile  cmachine.c  gofer.c  input.c  machdep.c  parser.c  parser.h  prelude.h
test/: Makefile  pug_arithmetic_test.txt  pug_error_test.txt  pug_file_examples.txt  pup_types_test.txt  run_tests_with_reports.py  test_manifest.txt  test_pug.py  type_tests.txt  types_test.txt
test/scripts/: examples.pgs
